# airis-mcp-gateway

./: .env.example  .gitignore  .installed_editors.json  .mcp.json  .npmrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER_MCP_GATEWAY_SETUP.md  Dockerfile  HACKING.md  Makefile  PERFORMANCE_TEST.md  PROJECT_INDEX.json  PROJECT_INDEX.md  README.md  SECRETS.md  SECURITY.md  TASK_LIST.md  Taskfile.yml  biome.json  devbox.json  docker-compose.dev.yml  docker-compose.dist.yml  docker-compose.yml  install.sh  justfile  manifest.toml  mcp-config.json  mcp-config.json.example  mcp.json  mcp.json.template  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_token_reduction.py  workspace.yaml
apps/api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  pyrightconfig.json  start.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 003_seed_mcp_servers.py  005_fix_timestamp_defaults.py  006_add_updated_at_triggers.py  007_credentials_and_settings.py
apps/api/app/: dependencies.py  main.py
apps/api/app/api/: routes.py
apps/api/app/connectors/: base.py  factory.py
apps/api/app/core/: circuit.py  config.py  schema_partitioning.py  validators.py
apps/api/app/crud/: mcp_server.py
apps/api/app/models/: __init__.py  mcp_credential.py
apps/api/app/repositories/: settings.py
apps/api/src/airis_mcp_gateway_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/src/app/: dependencies.py  main.py
apps/api/tests/: conftest.py  test_schema_partitioning.py
apps/api/tests/e2e/: test_dynamic_mcp_e2e.py  test_mcp_servers_e2e.py
apps/api/tests/integration/: test_mcp_server_persistence.py
apps/api/tests/unit/: conftest.py  test_auth_middleware.py  test_circuit.py  test_config.py  test_config_validation.py  test_cors.py  test_dashboard_summary.py  (+21 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+492 files in other folders)
