[package]
name = "airis-mcp-gateway"
version = "1.3.0"
description = "AIRIS MCP Gateway - Unified MCP server management with menubar app"
authors = ["Agiletec Inc."]
edition = "2021"
license = "MIT"

[lib]
name = "airis_mcp_gateway_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
